--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "symfony/dom-crawler": "*"
+        "symfony/dom-crawler": "*",
+        "ext-curl": "*"
     },
     "autoload": {
         "psr-4": {
